--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "webpack serve --config webpack.dev.js",
-        "dev" : "webpack --config webpack.dev.js",
+        "dev": "webpack --config webpack.dev.js",
         "build": "webpack --config webpack.prod.js"
     },
     "repository": {
@@ -20,13 +20,20 @@
     },
     "homepage": "https://github.com/Trungenial/odin-todo-list#readme",
     "devDependencies": {
+        "commitizen": "^4.3.1",
         "css-loader": "^7.1.2",
         "css-minimizer-webpack-plugin": "^7.0.2",
+        "cz-conventional-changelog": "^3.3.0",
         "html-webpack-plugin": "^5.6.3",
         "style-loader": "^4.0.0",
         "webpack": "^5.100.2",
         "webpack-cli": "^6.0.1",
         "webpack-dev-server": "^5.2.2",
         "webpack-merge": "^6.0.1"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
     }
 }
