--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "private": true,
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "webpack serve --config webpack.dev.js",
-        "dev": "webpack --config webpack.dev.js",
+        "dev": "webpack serve --config webpack.dev.js",
         "build": "webpack --config webpack.prod.js"
     },
     "repository": {
